src/test/deca/context/valid/homemade/asm.deca
// usage of asm

class A {
    int b() asm("SUB R0, R1");
}