src/test/deca/context/invalid/homemade/bad_method_redefinition_sig.deca
// trying to wrongly redefine method

class A {
    int x(float y) { return 3; }
}

class B extends A {
    int x(float y, int z) { return z; }
}